# GiftGenius-AI-Smart-AI-Powered-Gift-Shop-e-Commerce-

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: .env  pyproject.toml
backend/config/: settings.py  urls.py
backend/orders/: models.py  serializers.py  views.py
backend/orders/migrations/: 0003_remove_order_mpesa_reference_and_more.py
backend/payments/: admin.py  models.py  mpesa.py  paypal.py  serializers.py  services.py  urls.py  views.py
backend/payments/certs/: README.md
backend/payments/migrations/: 0001_initial.py
backend/products/: views.py
backend/vendors/: models.py  serializers.py  urls.py  views.py
backend/vendors/migrations/: 0002_company_mpesa_phone_company_payout_method_and_more.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  HeroCarousel.jsx  Logo.jsx  Navbar.jsx  ProductCard.jsx
frontend/src/components/admin/: ProductFormModal.jsx
frontend/src/components/ui/: EmptyState.jsx
frontend/src/layouts/: AdminLayout.jsx  VendorLayout.jsx
frontend/src/pages/: Cart.jsx  Checkout.jsx  DashboardOrders.jsx  DashboardProfile.jsx  DashboardReminders.jsx  GiftFinder.jsx  Landing.jsx  Login.jsx  NotFound.jsx  ProductDetail.jsx  Products.jsx  Register.jsx  VendorRegister.jsx
frontend/src/pages/admin/: AdminOrders.jsx  AdminPayouts.jsx  AdminProducts.jsx
frontend/src/services/: api.js  paymentService.js  vendorService.js
tools/: start-ngrok.bat
